[COZY-47] fix: collect(Collectors.toList()) -> toList() 변경